Improve text rendering of placeholder https://bugs.webkit.org/show_bug.cgi?id=145135
Reviewed by Eric Carlson.

* Modules/mediacontrols/mediaControlsApple.css: The <p> elements of the wireless playback
text are being popped out into separate layers, causing the text to render antialiased, which
looks bad on non-retina machines. Explicitly set the background color (which is ok since the
container element for the placeholder is also black). Also extend the height out 1pt to prevent
clipping of descenders.
(audio::-webkit-media-controls-wireless-playback-text-top): Set background color to black and add
1 to the height.
(audio::-webkit-media-controls-wireless-playback-text-bottom): Ditto.


Canonical link: https://commits.webkit.org/163171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184565 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css
+++ b/Source/WebCore/Modules/mediacontrols/mediaControlsApple.css
@@ -966,10 +966,11 @@ audio::-webkit-media-controls-wireless-playback-text-top {
     top: 15pt;
     width: 100%;
     line-height: 12pt;
-    height: 12pt;
+    height: 13pt;
     font-size: 12pt;
     text-align: center;
     margin: 0px;
+    background-color: black;
 }
 
 video::-webkit-media-controls-wireless-playback-text-bottom,
@@ -979,13 +980,14 @@ audio::-webkit-media-controls-wireless-playback-text-bottom {
     left: 5%;
     width: 90%;
     line-height: 10pt;
-    height: 10pt;
+    height: 11pt;
     font-size: 10pt;
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 0px;
+    background-color: black;
 }
 
 video::-webkit-media-controls-wireless-playback-status.small,
